# simpleepidemic

./: ..gitignore.un~  .gitignore  CMakeLists.txt
src/: DataModel.cpp  DataModel.h  main.cpp
tex/: tex.aux  tex.fdb_latexmk  tex.fls  tex.out  tex.tex  tex.toc  模板.doc  自动化专业导论-课程论文参考模版.doc
